@@ -1,5 +1,13 @@
 2005-02-09  Jean-Louis Martineau <martineau@iro.umontreal.ca>
 
+	* server-src/amdump.sh.in: Redirect in append mode.
+	* server-src/driver.c: Set stdout and stderr to not buffered.
+	* server-src/planner.c: Set stderr to not buffered.
+	  Print 'setup_estimate:' on one line.
+	* server-src/amstatus.pl.in: Parse new 'setup_estimate:' line.
+
+2005-02-09  Jean-Louis Martineau <martineau@iro.umontreal.ca>
+
 	* client-src/calcsize.c: Improve estimate for sparse file and count
 	  space for filenames.
 
